# Generated by Django 5.2 on 2025-05-09 19:36

import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('myapp', '0005_cliente_alter_pedido_loja'),
    ]

    operations = [
        migrations.CreateModel(
            name='Entregador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nome', models.CharField(max_length=100)),
                ('status', models.CharField(choices=[('Disponível', 'Disponível'), ('Ocupado', 'Ocupado'), ('Offline', 'Offline')], max_length=50)),
                ('localizacao', models.CharField(max_length=255)),
            ],
        ),
        migrations.RemoveField(
            model_name='avaliacao',
            name='usuario',
        ),
        migrations.RemoveField(
            model_name='pedido',
            name='loja',
        ),
        migrations.RemoveField(
            model_name='pedido',
            name='produto',
        ),
        migrations.RemoveField(
            model_name='pedido',
            name='quantidade',
        ),
        migrations.AddField(
            model_name='avaliacao',
            name='cliente',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='myapp.cliente'),
        ),
        migrations.AddField(
            model_name='pedido',
            name='cliente',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to='myapp.cliente'),
        ),
        migrations.AddField(
            model_name='pedido',
            name='observacoes',
            field=models.TextField(blank=True, null=True),
        ),
        migrations.AlterField(
            model_name='avaliacao',
            name='nota',
            field=models.PositiveIntegerField(validators=[django.core.validators.MinValueValidator(1), django.core.validators.MaxValueValidator(5)]),
        ),
        migrations.AlterField(
            model_name='cliente',
            name='cpf',
            field=models.CharField(blank=True, max_length=11, null=True, unique=True, validators=[django.core.validators.RegexValidator('^\\d{11}$', 'O CPF deve conter 11 dígitos')]),
        ),
        migrations.AddField(
            model_name='pedido',
            name='entregador',
            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='myapp.entregador'),
        ),
        migrations.CreateModel(
            name='ItemPedido',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('quantidade', models.PositiveIntegerField()),
                ('pedido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='itens', to='myapp.pedido')),
                ('produto', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='myapp.produto')),
            ],
        ),
        migrations.CreateModel(
            name='StatusEntrega',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('Pendente', 'Pendente'), ('Em Transporte', 'Em Transporte'), ('Entregue', 'Entregue')], max_length=100)),
                ('horario', models.DateTimeField(auto_now_add=True)),
                ('pedido', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='status_entrega', to='myapp.pedido')),
            ],
        ),
    ]
